--- a/beamercolorthemecranejavier.sty
+++ b/beamercolorthemecranejavier.sty
@@ -11,9 +11,9 @@
 
 \mode<presentation>
 
-\definecolor{craneorange}{RGB}{243,110,33}
-\definecolor{craneblack}{RGB}{0,0,0}
-\definecolor{cranegray}{RGB}{199,195,189}
+\definecolor{craneorange}{RGB}{ 255, 153, 0}
+\definecolor{craneblack}{RGB}{51, 51, 51}
+\definecolor{cranegray}{RGB}{102, 102, 102}
 \definecolor{cranebrown}{RGB}{81,49,39}
 
 \setbeamercolor{structure}{fg=craneblack}
