Added 2013 and 2014 concentration maps on log scale...

--- a/ThesisBeamer.tex
+++ b/ThesisBeamer.tex
@@ -212,8 +212,8 @@
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Goal}
-\subsection*{Goal}
+\section{Introduction}
+\subsection*{Introduction}
 % ----------------------------------- Slide -------------------------------------
 \begin{frame}{\LARGE Big Picture} 
 \begin{itemize}
@@ -424,11 +424,11 @@
 % \centerline{and model-based ELM (solid lines).}
 \end{frame}
 % --- slide ------------------------------------------------
-\begin{frame}{\LARGE Field Data Collection (con't)}{\vspace{0.1cm} \Large 2013 and 2014 Seasons}
+\begin{frame}{\LARGE Field Data Collection (con't)}{\vspace{0.1cm} \Large 2013, 2014 and 2015 Seasons}
 \begin{table}[htb]
   
   \centering
-  \includegraphics[width=11cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/Collect1314.png}
+  \includegraphics[width=10cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/Collect131415.png}
   \label{tab:collect}
 \end{table}
 \end{frame}
@@ -987,6 +987,10 @@
 \end{figure}
 
 \end{frame}
+% ----------------------------------- Slide -------------------------------------
+\begin{frame}{\LARGE Atmospheric Correction}{\vspace{0.1cm} \Large Conclusions}
+
+\end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section[CPA Retrieval]{CPA Retrieval}
 % \subsection*{}
@@ -1096,7 +1100,7 @@
 \end{block}
 \end{frame}
 % ----------------------------------- Slide -------------------------------------
-\begin{frame}{\LARGE CPA Retrieval Process}{\vspace{0.1cm}\Large Results 09-19-13}
+\begin{frame}{\LARGE CPA Retrieval Process}{\Large Results 09-19-13}
 \vspace{-0.2cm}
 \begin{figure}[htbp!]
   \begin{minipage}[a]{0.485\linewidth}
@@ -1126,25 +1130,27 @@
 
 
 % ----------------------------------- Slide -------------------------------------
-\begin{frame}{\LARGE CPA Retrieval Process}{\vspace{.1cm}\Large Results 09-29-14}
-\vspace{-0.3cm}
+\begin{frame}{\LARGE CPA Retrieval Process}{\Large Results 09-29-14}
+\vspace{-0.2cm}
 \begin{figure}[htbp!]
   \begin{minipage}[c]{0.49\linewidth}
   \hspace{-0.5cm}
       \centering
-      \includegraphics[trim=0 0 0 30,clip,height=3.7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CHLmap140929_150420}  
+      \includegraphics[trim=0 0 0 50,clip,height=3.7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/CHLmap140929masked.png}  
   \end{minipage}
 \hfill
 %% TSS
   \begin{minipage}[c]{0.49\linewidth}
+  \vspace{-0.1cm}
       \centering
-      \includegraphics[trim=0 0 0 30,clip,height=3.7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/TSSmap140929_150420}  
+      \includegraphics[trim=0 0 0 50,clip,height=3.6cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/TSSmap140929masked.png}  
   \end{minipage}
 
 %% CDOM
   \begin{minipage}[c]{1.0\linewidth}
+  		\vspace{0.05cm}
       \centering
-      \includegraphics[trim=0 0 0 30,clip,height=3.7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CDOMmap140929_150420}  
+      \includegraphics[trim=0 0 0 50,clip,height=3.7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/CDOmap140929masked.png}  
   \end{minipage}
 
   % \caption{CPA concentration maps for Landsat 8 image acquired on 09-29-2014 (scene LC80170302014272LGN00).\label{fig:CPAsMaps140929} } 
@@ -1310,8 +1316,12 @@ $n=1\dots N$: number of samples.
 \end{figure}
 
 \end{frame}
+% ----------------------------------- Slide -------------------------------------
+\begin{frame}{\LARGE CPA Retrieval}{\vspace{0.1cm} \Large Conclusions}
+
+\end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Summary and Conclusions}
+\section{Final Thoughts}
 % \subsection*{Conclusions}
 % ----------------------------------- Slide -------------------------------------
 \begin{frame}{\LARGE Summary}
@@ -1331,7 +1341,7 @@ $n=1\dots N$: number of samples.
 
 \end{frame}
 % ----------------------------------- Slide -------------------------------------
-\begin{frame}{\LARGE Conclusions} 
+\begin{frame}{\LARGE Final Conclusions} 
 \begin{itemize}\itemsep.4cm
 \Large
 \setbeamercovered{transparent}
@@ -1345,15 +1355,23 @@ $n=1\dots N$: number of samples.
 	\item Retrieval Algorithm is a good solution when some knowledge is available}
 \end{itemize}
 \end{frame}
- % ----------------------------------- Slide -------------------------------------
-% \section*{}
-% \begin{frame}%[shrink=30] 
-% \tiny
-%   \frametitle{References}
-%   \nocite{*}
-%   \bibliographystyle{apalike}
-%   \bibliography{HLbeamerbib}
-% \end{frame}
+% ----------------------------------- Slide -------------------------------------
+\begin{frame}{\LARGE Future Work}{\vspace{0.1cm} \Large Atmospheric Correction}
+
+\end{frame}
+% ----------------------------------- Slide -------------------------------------
+\begin{frame}{\LARGE Future Work}{\vspace{0.1cm} \Large CPA Retrieval}
+
+\end{frame}
+% ----------------------------------- Slide -------------------------------------
+\begin{frame}{\LARGE Future Work}{\vspace{0.1cm} \Large Big Picture}
+
+\end{frame}
+% ----------------------------------- Slide -------------------------------------
+\begin{frame}{\LARGE Acknowledgments}
+
+\end{frame}
+
 
 %% ----------------------------------- Slide -------------------------------------
 
@@ -1556,16 +1574,6 @@ where:\\
 % \end{block}
 
 \end{frame}
-
-% --- slide ------------------------------------------------
-\section*{}
-\begin{frame}%[shrink=30] 
-\tiny
-  \frametitle{References}
-  % \nocite{*}
-  \bibliographystyle{apalike}
-  \bibliography{/Users/javier/Desktop/Javier/PHD_RIT/Latex/javier_bib}
-\end{frame}
 % ----------------------------------- Slide -------------------------------------
 \begin{frame}{\LARGE Atmospheric Correction}{\Large Methods Comparison}
 % \centerline{\LARGE Bright and Dark Pixel}
@@ -1656,6 +1664,14 @@ $[nm]$		&	  		      &  		 	  &	  		&			&	   		&	     	&$[mg/m^3]$ 	\\	\hline \hl
 
 \end{frame}
 
-
+ % ----------------------------------- Slide -------------------------------------
+\section*{}
+\begin{frame}%[shrink=30] 
+\tiny
+  \frametitle{References}
+  \nocite{*}
+  \bibliographystyle{apalike}
+  \bibliography{HLbeamerbib}
+\end{frame}
 
 \end{document} % EEEEEEEEEEENNNNNNNNNNNNNNDDDDDDDDDDDD
